Minor whitespace formatting fix.

--- a/src/assets/scss/modules/_button-woocommerce.scss
+++ b/src/assets/scss/modules/_button-woocommerce.scss
@@ -341,8 +341,7 @@ nav.gridlist-toggle {
 
 // 7. Shop Page Free Shipping Banner
 // -=-=-=-=-=-=-=-=
-.bp-free-shipping-banner
-{
+.bp-free-shipping-banner {
     width: 100%;
     font-size: 1.2rem;
     letter-spacing: .05rem;
@@ -357,7 +356,7 @@ nav.gridlist-toggle {
 
 // 8. Shop Page Yotpo Stars Fix
 // -=-=-=-=-=-=-=-=-=-=-=-=-=-=
-.post-type-archive .standalone-bottomline{
+.post-type-archive .standalone-bottomline {
 	display: block;
     justify-content: unset;
 }
